--- a/index.html
+++ b/index.html
@@ -19,7 +19,9 @@
     <link rel="stylesheet" href="./css/style.css" />
     <link rel="stylesheet" href="./css/chat.css" />
     <script src="https://cdn.pubnub.com/sdk/javascript/pubnub.7.2.2.min.js"></script>
-    <script src="./js/bundle.js"></script>
+    <script>
+        {% include bundle.js %}
+    </script>
 </HEAD>
 
 <BODY onload="load()">
