--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 <BODY onload="load()">
 
     <div id="chat-container">
-        <div id="chat-lhs" style="display: none;">
+        <div id="chat-lhs">
             <div class="chat-list-current-user">
                 <div class="user-with-presence">
                     <img id="avatar" src="./img/avatar/placeholder.png" class="chat-list-avatar">
