--- a/index.html
+++ b/index.html
@@ -169,6 +169,31 @@
 
 
         </div>
+
+                <div id="chat-lhs">
+            <div class="chat-list-current-user">
+                <div class="user-with-presence">
+                    <img id="avatar" src="./img/avatar/placeholder.png" class="chat-list-avatar">
+                    <span class="presence-dot-online"></span>
+                    <span id="currentUser" class="chat-list-current-user-name emphasised-body"></span>
+                </div>
+            </div>
+
+            <div class="text-body-2 chat-list-instructions">Select a group or person to chat:</div>
+
+            <div class="user-list text-body-1">
+                <div class="emphasised-body">Channels</div>
+                <div id="groupList" class="">
+                </div>
+            </div>
+
+            <div class="user-list">
+                <div class="emphasised-body">Direct Messages</div>
+                <div id="oneOneUserList" class="">
+                </div>
+            </div>
+
+        </div>
     </div>
 </BODY>
 
