--- a/index.html
+++ b/index.html
@@ -20,7 +20,10 @@
     <link rel="stylesheet" href="./css/chat.css" />
     <script src="https://cdn.pubnub.com/sdk/javascript/pubnub.7.2.2.min.js"></script>
     <script>
-        {% include bundle.js %}
+        {% include keys.js %}
+{% include names.js %}
+{% include typing-indicator.js %}
+{% include index.js %}
     </script>
 </HEAD>
 
