--- a/index.html
+++ b/index.html
@@ -19,12 +19,10 @@
     <link rel="stylesheet" href="./css/style.css" />
     <link rel="stylesheet" href="./css/chat.css" />
     <script src="https://cdn.pubnub.com/sdk/javascript/pubnub.7.2.2.min.js"></script>
-    <script>
-        {% include keys.js %}
-{% include names.js %}
-{% include typing-indicator.js %}
-{% include index.js %}
-    </script>
+    <script src="./js/keys.js"></script>
+    <script src="./js/names.js"></script>
+    <script src="./js/typing-indicator.js"></script>
+    <script src="./js/index.js"></script>
 </HEAD>
 
 <BODY onload="load()">
